src/k8s/proxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxyapp
spec:
  replicas: 2
  template:
    spec:
      containers:
      - image: apps/proxy
        name: proxyapp
        resources:
          requests:
            cpu: 200m
          limits:
            cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: proxyapp
spec:
  ports:
  - name: 90-9090
    port: 90
    protocol: TCP
    targetPort: 9090
