src/k8s/proxy/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: proxy
    http:
      paths:
        - path: /
          backend:
            serviceName: proxyapp
            servicePort: 90
